--- a/Lec08_Sorting.ipynb
+++ b/Lec08_Sorting.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqWulA/FQfc3gLM32F/i0p",
+      "authorship_tag": "ABX9TyNZ5Whr0WPRj6DnvD85f3Pr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,13 +47,35 @@
         "      a_list[position] = a_list[position - 1]\n",
         "      position = position -1\n",
         "\n",
-        "      a_list[position] = current_value"
+        "      a_list[position] = current_value\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# 예시\n",
+        "arr = [5, 3, 8, 4, 2]\n",
+        "print(\"정렬 전:\", arr)\n",
+        "insertion_sort(arr)\n",
+        "print(\"정렬 후:\", arr)"
       ],
       "metadata": {
-        "id": "Z4uGje7lArLO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z4uGje7lArLO",
+        "outputId": "01273406-8a59-48a4-ba23-c0e1057dbdbe"
       },
-      "execution_count": 3,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정렬 전: [5, 3, 8, 4, 2]\n",
+            "정렬 후: [2, 3, 4, 5, 8]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -101,13 +123,34 @@
         "    a_list[first] = a_list[right_mark]\n",
         "    a_list[right_mark] = temp\n",
         "\n",
-        "    return right_mark\n"
+        "    return right_mark\n",
+        "\n",
+        "\n",
+        "\n",
+        "# 예시\n",
+        "arr = [5, 3, 8, 4, 2]\n",
+        "print(\"정렬 전:\", arr)\n",
+        "quick_sort(arr)\n",
+        "print(\"정렬 후:\", arr)\n"
       ],
       "metadata": {
-        "id": "GMwLdlabB1He"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GMwLdlabB1He",
+        "outputId": "9cf5bd15-c1b6-4cca-909e-544c7b25c025"
       },
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정렬 전: [5, 3, 8, 4, 2]\n",
+            "정렬 후: [2, 3, 4, 5, 8]\n"
+          ]
+        }
+      ]
     }
   ]
 }
